deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friendly-succotash
  labels:
    app: friendly-succotash
spec:
  replicas: 3
  selector:
    matchLabels:
      app: friendly-succotash
  template:
    metadata:
      labels:
        app: friendly-succotash
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
