ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friendly-succotash
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: friendly-succotash
                port:
                  number: 80
